samples/_failures_safe/1761095485_2e6951_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_975c1fb6.c: In function ‘main’:
./samples/SAFE/__tmp_975c1fb6.c:169:5: error: expected expression at end of input
  169 |     free_matrix(&
      |     ^~~~~~~~~~~
./samples/SAFE/__tmp_975c1fb6.c:169:5: error: expected declaration or statement at end of input
